@@ -16,6 +16,7 @@ package org.eclipse.swt.examples.imageanalyzer;
 import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.text.MessageFormat;
 import java.util.ArrayList;
@@ -879,7 +880,7 @@ public class ImageAnalyzer {
 		imageCanvas.setCursor(waitCursor);
 		ImageLoader oldLoader = loader;
 		try {
-			URL url = new URL(urlname);
+			URL url = new URI(urlname).toURL();
 			try (InputStream stream = url.openStream()) {
 				loader = new ImageLoader();
 				if (incremental) {
@@ -1165,6 +1166,7 @@ public class ImageAnalyzer {
 		if (image == null) return;
 
 		try {
+			final int DOTS_PER_INCH = 96;
 			// Ask the user to specify the printer.
 			PrintDialog dialog = new PrintDialog(shell, SWT.NONE);
 			if (printerData != null) dialog.setPrinterData(printerData);
@@ -1172,9 +1174,8 @@ public class ImageAnalyzer {
 			if (printerData == null) return;
 
 			Printer printer = new Printer(printerData);
-			Point screenDPI = display.getDPI();
 			Point printerDPI = printer.getDPI();
-			int scaleFactor = printerDPI.x / screenDPI.x;
+			int scaleFactor = printerDPI.x / DOTS_PER_INCH;
 			Rectangle trim = printer.computeTrim(0, 0, 0, 0);
 			if (printer.startJob(currentName)) {
 				if (printer.startPage()) {
@@ -1221,7 +1222,7 @@ public class ImageAnalyzer {
 			loader = new ImageLoader();
 			ImageData[] newImageData;
 			if (fileName == null) {
-				URL url = new URL(currentName);
+				URL url = new URI(currentName).toURL();
 				try (InputStream stream = url.openStream()) {
 					long startTime = System.currentTimeMillis();
 					newImageData = loader.load(stream);
